# final-project-theflysky

./: .gitignore  KINECT_360_SETUP.md  KOBUKI_QBOT_GESTURE_CONTROL.md  Kobukidriver- README  README.md  Run.txt  requirements-venv.txt  requirements.txt
AccurateGesture/: super_accurate_gestures.py
Component testing/: Webcam.py  hand_gestures.py
qbot_ws/: .gitignore
qbot_ws/src/behavior_node/: package.xml  setup.py
qbot_ws/src/behavior_node/behavior_node/: pet_behavior_node.py  sound_profiles.py
qbot_ws/src/gesture_node/: package.xml  setup.py
qbot_ws/src/gesture_node/gesture_node/: frame_processor.py  gesture_command_node.py  signals.py
qbot_ws/src/gesture_node/test/: test_decoder.py
qbot_ws/src/kinect_camera/: CMakeLists.txt  README.md  package.xml
qbot_ws/src/kinect_camera/src/: kinect_rgbd_node.cpp
qbot_ws/src/kobuki_control/: kobuki_control README  package.xml  setup.cfg  setup.py
qbot_ws/src/kobuki_control/kobuki_control/: kobuki_control_node.py  kobuki_pid.py
qbot_ws/src/qbot_bringup/: package.xml  setup.cfg  setup.py
qbot_ws/src/qbot_bringup/config/: qbot_params.yaml
qbot_ws/src/qbot_bringup/launch/: bringup.launch.py  motion_test.launch.py  system.launch.py
qbot_ws/src/qbot_bringup/qbot_bringup/: motion_test_node.py
qbot_ws/src/qbot_description/: package.xml  setup.cfg  setup.py
qbot_ws/src/qbot_description/launch/: simulation.launch.py
qbot_ws/src/qbot_description/sdf/: qbot.sdf  qbot_world.sdf
qbot_ws/src/vision_node/: package.xml  setup.py
qbot_ws/src/vision_node/vision_node/: face_tracker_node.py
